# gitegylet-electron

./: .gitignore  README.md  package-lock.json  package.json  shadow-cljs.edn
resources/: preload.js
resources/public/: index.html
resources/public/css/: checkbox-tree.css  main.css
src/app/main/: core.cljs
src/app/renderer/: core.cljs  db.cljs  events.cljs  subs.cljs  views.cljs
src/cljs/electron/: core.cljs  events.cljs
src/cljs/gitegylet/: config.cljs  core.cljs  db.cljs  effects.cljs  events.cljs  git.cljs  inject.cljs  menu.cljs  subs.cljs  views.cljs
src/cljs/gitegylet/branches/: db.cljs  events.cljs  subs.cljs  views.cljs
src/cljs/gitegylet/commits/: commits.cljs  db.cljs  events.cljs  subs.cljs  views.cljs
src/cljs/gitegylet/modal/: events.cljs  subs.cljs  views.cljs
src/cljs/gitegylet/repo/: db.cljs  events.cljs  subs.cljs
src/cljs/gitegylet/views/: branches.cljs  commits.cljs
src/rust/: package.json
src/rust/native/: .gitignore  Cargo.toml
src/rust/native/src/: branch.rs  commit.rs  lib.rs  status.rs
