[package]
name = "gitegylet-rs"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[lib]
name = "gitegylet"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
neon-serde = "0.4.0"
serde_derive = "1.0.111"
serde = "1.0.111"
git2 = "0.13"

md-5 = "0.9.0"
